src/test/resources/purescript_examples/failing/AnonArgument1.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith IncorrectAnonymousArgument\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSModuleNameImpl(ModuleName)
        PSQualifiedImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSTypeDeclarationImpl(TypeDeclaration)
        PSTypeAnnotationNameImpl(TypeAnnotationName)
          PSIdentifierImpl(identifier)
            PsiElement(identifier)('test')
            PsiElement(whitespace)(' ')
        PsiElement(::)('::')
        PsiElement(whitespace)(' ')
        PSTypeImpl(Type)
          PSTypeAtomImpl(TypeAtom)
            PSTypeConstructorImpl(TypeConstructor)
              PSQualifiedImpl(Qualified)
                PSProperNameImpl(ProperName)
                  PsiElement(proper name)('Int')
                  PsiElement(whitespace)(' ')
          PsiElement(->)('->')
          PsiElement(whitespace)(' ')
          PSTypeImpl(Type)
            PSTypeAtomImpl(TypeAtom)
              PSTypeConstructorImpl(TypeConstructor)
                PSQualifiedImpl(Qualified)
                  PSProperNameImpl(ProperName)
                    PsiElement(proper name)('Int')
                    PsiElement(whitespace)('\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PSIdentifierImpl(identifier)
          PsiElement(identifier)('test')
          PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSVarImpl(Var)
              PSQualifiedImpl(Qualified)
                PSIdentifierImpl(identifier)
                  PsiElement(identifier)('_')
                  PsiElement(whitespace)('\n')
